solve ui bugs - extra height in case of faqs,wrong background color in chat panel in case of faqs, adjust width of chat panel to not overlap with sidebar

--- a/src/components/Commonfaqs/Commonfaqs.css
+++ b/src/components/Commonfaqs/Commonfaqs.css
@@ -3,8 +3,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 155px;
-  margin-left: -75px;
+  margin-top: 78px;
+  margin-left: -118px;
 }
 .faqs1 {
   display: flex;
