--- a/src/components/SingleMessage/SingleMessage.css
+++ b/src/components/SingleMessage/SingleMessage.css
@@ -20,6 +20,7 @@
 .ai {
   width: 50px;
   height: 50px;
+  margin-top: 10px;
 }
 .chat-left {
   /*justify-content: flex-start;*/
