--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,8 @@ Questions
 .topDiv{
   display: flex;
   flex-direction: row;
+  min-height: 100vh;
+  max-height: 100vh;
   background-color: black;
 }
 main {
@@ -180,12 +182,14 @@ button :: hover {
 .chatBox2 {
   /*display: flex;
   flex-direction: column;*/
-  width: calc(100vw - 200px);
+  width: calc(100vw - 250px);
+  margin-left: 100px;
 }
 
 @media only screen and (max-width: 500px) {
   .chatBox2{
     width: 100vw;
+    margin-left: 0px;
   }
   .parentDiv{
     padding-left: 0px;
